# databuilder

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
Config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
DataBuilder/: admin.py  apps.py  filtersets.py  models.py  note.txt  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  validators.py  viewsets.py
DataBuilder/migrations/: 0001_initial.py  0002_rename_product_id_cartitem_product_and_more.py  0003_cartitem_databuilder_datetim_5e6d9d_idx_and_more.py  0004_remove_receipt_databuilder_shop_id_a9f575_idx.py  0005_remove_cartitem_databuilder_datetim_5e6d9d_idx_and_more.py
